--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,16 @@ cmake_minimum_required(VERSION "3.18.0")
 # Name of project and that it is C++ only.
 project (impact CXX)
 
-# Supplementary Files
-file(GLOB sources "utils/*.cpp")
 
 # Dependencies
 find_package (ZLIB)
 find_package (SeqAn REQUIRED)
 find_package(Armadillo REQUIRED)
+
+include_directories("${PROJECT_SOURCE_DIR}/src")
+include_directories("${PROJECT_SOURCE_DIR}/lib/")
+include_directories("${PROJECT_SOURCE_DIR}/lib/bamtools/src")
+
 
 # Build Setup
 include_directories (${SEQAN_INCLUDE_DIRS})
@@ -18,6 +21,18 @@ include_directories(${ARMADILLO_INCLUDE_DIRS})
 add_definitions (${SEQAN_DEFINITIONS})
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} -pthread -std=c++14")
 
-add_executable (impact main.cpp)
+
+file(GLOB IMPACT_FILES
+    ${PROJECT_SOURCE_DIR}/src/impact.cpp
+    ${PROJECT_SOURCE_DIR}/src/utils/*.h
+)
+
+
+add_subdirectory(lib)
+
+# TIDDIT executable
+add_executable(impact ${IMPACT_FILES})
 target_link_libraries (impact ${SEQAN_LIBRARIES})
 target_link_libraries(impact ${ARMADILLO_LIBRARIES})
+target_link_libraries(impact ${ZLIB_LIBRARIES})
+target_link_libraries(impact  BamTools)
